reformat files